[gd_scene load_steps=12 format=2]

[ext_resource path="res://Fonts/SF_Archery_Black_SC_Oblique.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD/shop_bar_progress.png" type="Texture" id=2]
[ext_resource path="res://HUD/player_lifebar_fill.png" type="Texture" id=3]
[ext_resource path="res://HUD/player_lifebar_outline.png" type="Texture" id=4]
[ext_resource path="res://HUD/panel_right.png" type="Texture" id=5]
[ext_resource path="res://Scripts/PlayerStatsHUD.gd" type="Script" id=6]
[ext_resource path="res://HUD/shop_bar_over.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 35
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
use_filter = true
font_data = ExtResource( 1 )

[node name="PlayerStatsHUD" type="Control"]
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_left = 0.397217
margin_top = 0.397217
margin_right = 421.397
margin_bottom = 376.397
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopMeter" type="TextureProgress" parent="Background"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -58.7455
margin_top = -155.117
margin_right = -23.7455
margin_bottom = -18.1173
max_value = 1.0
step = 0.0
value = 1.0
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 2 )
fill_mode = 3
tint_over = Color( 0, 1, 0.807843, 1 )
tint_progress = Color( 0, 1, 0.807843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="Background"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -314.819
margin_top = -154.394
margin_right = -115.819
margin_bottom = -66.3941
step = 0.1
value = 100.0
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarOutline" type="TextureRect" parent="Background"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -316.186
margin_top = -155.59
margin_right = -117.186
margin_bottom = -67.5898
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreNameLabel" type="Label" parent="Background"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -90.2963
margin_top = -291.605
margin_right = -25.2963
margin_bottom = -255.605
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 1, 0.807843, 1 )
text = "Score"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopLabel" type="Label" parent="Background"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -63.528
margin_top = -186.248
margin_right = -20.528
margin_bottom = -156.248
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 1, 0.807843, 1 )
text = "Shop"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthNameLabel" type="Label" parent="Background"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -382.393
margin_top = -59.2324
margin_right = -213.393
margin_bottom = -23.2324
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 1, 0.807843, 1 )
text = "Ship Integrity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="Background"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -173.0
margin_top = -246.0
margin_right = -21.9998
margin_bottom = -204.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.807843, 1 )
text = "9.999.999"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="Background"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -194.056
margin_top = -58.0837
margin_right = -113.056
margin_bottom = -16.0837
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 1, 0.807843, 1 )
text = "100%"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
